<resources>
    <string name="app_name">CV360 Mobile</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Bottom Nav Bar-->
    <string name="title_settings">Configuración</string>
    <string name="title_dashboard">Catálogos</string>
    <string name="title_about">Acerca de</string>

    <!-- Login Screen Text-->
    <string name="login_screen_title">Iniciar sesión</string>
    <string name="login_screen_sub_title">Por favor ingresa tus credenciales para continuar</string>
    <string name="login_screen_label_username">Usuario</string>
    <string name="login_screen_label_passwor">Contraseña</string>
    <string name="login_screen_label_button">Acceder</string>
    <string name="login_screen_warning_info">⚠ ¡No compartas tus credenciales!</string>
    <string name="login_screen_footer_app">© 2025 CV360, Grupo Susess Todos los derechos reservados</string>
    <string name="login_screen_image_description">Logo cv360 app</string>

    <!-- Settings Screen -->
    <string name="settings_screen_title">Preferencias</string>
    <string name="settings_screen_card_title_facility">Seleccionador de datos</string>
    <string name="settings_screen_hint_facility">Instalación</string>
    <string name="settings_screen_button_save">Guardar</string>
    <string name="settings_screen_hint_tank">Autotanque</string>
    <string name="settings_screen_helper_facility">Seleccione una instalacion.</string>
    <string name="settings_screen_helper_tank">Seleccione un autotanque.</string>
    <string name="settings_screen_hint_product">Producto</string>
    <string name="settings_screen_helper_product">Asignación automática</string>
    <string name="settings_screen_hint_unit_measurement">Unidad de medida</string>
    <string name="settings_screen_card_title_save_values">Datos Persistentes</string>

    <!-- About Screen -->
    <string name="about_screen_title">Acerca de</string>
    <string name="about_screen_label_application">Aplicación</string>
    <string name="about_screen_label_name">Nombre</string>
    <string name="about_screen_label_version">Versión</string>
    <string name="about_screen_label_rights">Derechos</string>
    <string name="about_screen_label_serial_number">Número de serie</string>
    <string name="about_screen_label_supplier">Proveedor</string>
    <string name="about_screen_label_licensed_product">Producto licenciado a</string>
    <string name="empty_list">Elementos no encontrados</string>

    <!-- Reception Screen -->
    <string name="reception_screen_title">Recepción</string>
    <string name="reception_screen_label_start_date">Inicio</string>
    <string name="reception_screen_label_end_date">Fin</string>
    <string name="reception_screen_label_search"> </string>

    <!-- Delivery Screen -->
    <string name="delivery_screen_title">Entregas</string>
    <string name="delivery_screen_label_start_date">Inicio</string>
    <string name="delivery_screen_label_end_date">Fin</string>
    <string name="delivery_screen_label_search"> </string>

    <!-- events screen -->
    <string name="events_screen_title">Alarmas y Eventos</string>
    <string name="events_screen_hint_type">Tipo</string>
    <string name="events_screen_helper_type">Seleccione el tipo de evento</string>
    <string name="events_screen_hint_date">Fecha</string>
    <string name="events_screen_hint_time">Hora</string>
    <string name="events_screen_helper_datetime">Seleccione fecha y hora</string>
    <string name="events_screen_hint_component">Componente</string>
    <string name="events_screen_helper_component">Elemento donde se origino la alarma o evento.</string>
    <string name="events_screen_hint_description">Descripción</string>
    <string name="events_screen_helper_description">Detalla como se origino la alarma o evento.</string>
    <string name="events_screen_button_send">Enviar</string>


    <!--Common delivery and reception -->
    <string name="ops_screen_title">Transacciones</string>
    <string name="ops_screen_card_title_opetation">Transacción</string>
    <string name="ops_screen_helper_operation">Transaccion que se llevara a cabo</string>
    <string name="ops_screen_hint_select_ops">Seleccionar</string>
    <string name="ops_screen_card_title_volume">Volumen</string>
    <string name="ops_screen_hint_volumen_ops">Volumen</string>
    <string name="ops_screen_helper_volumen_operation">Volumen de la transaccion</string>
    <string name="ops_screen_card_title_datetime">Fecha &amp; Hora</string>
    <string name="ops_screen_hint_start_end_date">Fecha</string>
    <string name="ops_screen_hint_start_end_time">Hora</string>
    <string name="ops_screen_helper_start_datetime">Inicio de la transaccion.</string>
    <string name="ops_screen_helper_end_datetime">Fin de la transaccion.</string>
    <string name="ops_screen_card_title_evidence">Evidencia</string>
    <string name="ops_screen_hint_file">Archivo</string>
    <string name="ops_screen_helper_file">Ruta del archivo de evidencia.</string>
    <string name="button_select_file">Seleccionar</string>
    <string name="button_save_operation">Guardar</string>


    <!--common-->
    <string name="helper_required">requerido</string>
    <string name="helper_not_email">Ingrese un correo electrónico válido.</string>
</resources>