<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.susess.cv360.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.susess.cv360.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_reception"
            app:destination="@id/navigation_reception" />
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_delivery"
            app:destination="@id/navigation_delivery" />
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_events"
            app:destination="@id/navigation_events" />
    </fragment>

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.susess.cv360.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_reception"
        android:name="com.susess.cv360.ui.receptions.ReceptionFragment"
        android:label="@string/reception_screen_title"
        tools:layout="@layout/fragment_reception" >
        <action
            android:id="@+id/action_navigation_reception_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_delivery"
        android:name="com.susess.cv360.ui.deliveries.DeliveriesFragment"
        android:label="@string/delivery_screen_title"
        tools:layout="@layout/fragment_deliveries" >
        <action
            android:id="@+id/action_navigation_delivery_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.susess.cv360.ui.events.EventsFragment"
        android:label="@string/events_screen_title"
        tools:layout="@layout/fragment_events" >
        <action
            android:id="@+id/action_navigation_events_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>
</navigation>