<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".ui.events.EventsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/events_screen_helper_type"
                app:startIconDrawable="@drawable/ic_wysiwyg_24dp"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_events"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/events_screen_hint_type"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/events_screen_hint_date"
                    app:helperText="@string/events_screen_helper_datetime"
                    android:paddingStart="0dp"
                    android:paddingEnd="4dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/baseline_calendar_month_24"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/input_layout_time"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/events_screen_hint_time"
                    android:paddingStart="4dp"
                    android:paddingEnd="0dp"
                    app:endIconMode="clear_text"
                    android:layout_weight="1"
                    app:startIconDrawable="@drawable/baseline_access_time_filled_24"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                    app:layout_constraintStart_toEndOf="@+id/input_layout_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="false"/>

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_component"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/events_screen_hint_component"
                app:helperText="@string/events_screen_helper_component"
                app:endIconMode="clear_text"
                app:counterEnabled="false"
                app:startIconDrawable="@drawable/ic_manufacturing_24dp"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_component"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="128"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/events_screen_hint_description"
                app:helperText="@string/events_screen_helper_description"
                app:endIconMode="clear_text"
                app:counterMaxLength="250"
                app:counterEnabled="true"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_descripcion"
                    android:layout_width="match_parent"
                    android:lines="10"
                    android:minLines="5"
                    android:maxLines="15"
                    android:gravity="top|start"
                    android:layout_height="wrap_content"
                    android:maxLength="255"
                    android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_send"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/events_screen_button_send"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>