<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".ui.deliveries.DeliveriesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_start_date"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/delivery_screen_label_start_date"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toStartOf="@+id/input_layout_end_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_date_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_end_date"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:hint="@string/delivery_screen_label_end_date"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toStartOf="@+id/button_search"
            app:layout_constraintStart_toEndOf="@+id/input_layout_start_date"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_date_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_search"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:text="@string/delivery_screen_label_search"
            android:drawableEnd="@drawable/ic_search_24"
            app:layout_constraintBaseline_toBaselineOf="@+id/input_layout_end_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/input_layout_end_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_search_bar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_deliveries"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_deliveries" />
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>